<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activites.LogInActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/fragment2"
        />
    <LinearLayout
        android:id="@+id/llayoutuser"
        android:background="@drawable/edit_text_bg"
        android:layout_marginRight="@dimen/dp_24"
        android:layout_marginLeft="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_184"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_15"
            android:src="@drawable/ic_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_gravity="center"
            android:id="@+id/Login"
            android:hint="@string/Username"
            android:layout_width="@dimen/dp_293"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="@dimen/dp_24"
        android:layout_below="@+id/llayoutuser"
        android:id="@+id/llayoutpassword"
        android:background="@drawable/edit_text_bg"
        android:layout_marginRight="@dimen/dp_24"
        android:layout_marginLeft="@dimen/dp_24"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_15"
            android:src="@drawable/ic_lock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:inputType="textPassword"
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_gravity="center"
            android:id="@+id/password"
            android:hint="@string/Password"
            android:layout_width="@dimen/dp_293"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <CheckBox
        android:layout_marginTop="@dimen/dp_24"
        android:layout_below="@+id/llayoutpassword"
        android:background="@drawable/edit_text_bg"
        android:layout_marginRight="@dimen/dp_24"
        android:layout_marginLeft="@dimen/dp_24"
        android:id="@+id/checkbox"
        android:text="Remember me"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_marginTop="@dimen/dp_24"
        android:layout_below="@+id/checkbox"
        android:id="@+id/llayouButtons"
        android:layout_marginRight="@dimen/dp_24"
        android:layout_marginLeft="@dimen/dp_24"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:background="@drawable/countryselector_bg"
            android:layout_gravity="center"
            android:id="@+id/loginnext"
            android:text="@string/LogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>


</RelativeLayout>