<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activites.SignUpActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/fragment2"
        />
    <LinearLayout
        android:id="@+id/llayoutemail"
        android:background="@drawable/edit_text_bg"
        android:layout_marginRight="@dimen/dp_24"
        android:layout_marginLeft="@dimen/dp_24"
        android:layout_marginTop="@dimen/dp_184"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_15"
            android:src="@drawable/ic_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:layout_marginLeft="@dimen/dp_15"
            android:padding="@dimen/dp_15"
            android:layout_gravity="center"
            android:id="@+id/email"
            android:hint="@string/Username"
            android:layout_width="@dimen/dp_293"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="@dimen/dp_24"
        android:layout_below="@+id/llayoutemail"
        android:id="@+id/llayoutpassword"
        android:background="@drawable/edit_text_bg"
        android:layout_marginRight="@dimen/dp_24"
        android:layout_marginLeft="@dimen/dp_24"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_15"
            android:src="@drawable/ic_lock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:inputType="textPassword"
            android:layout_marginLeft="@dimen/dp_15"
            android:padding="@dimen/dp_15"
            android:layout_gravity="center"
            android:id="@+id/password"
            android:hint="@string/Username"
            android:layout_width="@dimen/dp_293"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="@dimen/dp_24"
        android:layout_below="@+id/llayoutpassword"
        android:id="@+id/llayoutUsername"
        android:background="@drawable/edit_text_bg"
        android:layout_marginRight="@dimen/dp_24"
        android:layout_marginLeft="@dimen/dp_24"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_marginLeft="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_15"
            android:src="@drawable/ic_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:inputType="textPassword"
            android:layout_marginLeft="@dimen/dp_15"
            android:padding="@dimen/dp_15"
            android:layout_gravity="center"
            android:id="@+id/username"
            android:hint="@string/Username"
            android:layout_width="@dimen/dp_293"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/dp_24"
        android:layout_below="@+id/llayoutUsername"
        android:id="@+id/llayouButtons"
        android:layout_marginRight="@dimen/dp_24"
        android:layout_marginLeft="@dimen/dp_24"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:background="@drawable/countryselector_bg"
            android:layout_gravity="center"
            android:id="@+id/prev"
            android:text="@string/Prev"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:background="@drawable/countryselector_bg"
            android:layout_gravity="center"
            android:id="@+id/next"
            android:layout_weight="1"
            android:text="@string/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>





</RelativeLayout>